# LivingOS

./: .gitignore  Cargo.toml  LICENSE  README.md  prd.txt  start.ps1
crates/los-kernel/: Cargo.toml
crates/los-kernel/src/: lib.rs
crates/los-memory/: Cargo.toml
crates/los-memory/src/: lib.rs
crates/los-perception/: Cargo.toml
crates/los-perception/src/: lib.rs
crates/los-router/: Cargo.toml
crates/los-router/src/: lib.rs
crates/los-runtime/: Cargo.toml
crates/los-runtime/src/: lib.rs  society.rs
crates/los-shell/: Cargo.toml
crates/los-shell/src/: main.rs
docs/: INSTALL.md  ROADMAP.md  STATUS.md  USAGE.md
kernel/: Cargo.toml  run.ps1  run.sh
kernel/.cargo/: config.toml
kernel/src/: audio.rs  bridge.rs  console.rs  fbcon.rs  font.rs  fs.rs  gop.rs  idt.rs  main.rs  memgraph.rs  mm.rs  net.rs  nn.rs  nn_weights.rs  planner.rs  plugins.rs  sched.rs  selfhost.rs  serial.rs  shell.rs  society.rs  task.rs
release/video/: list.txt
tools/: assemble_demo.ps1  make_release.ps1  model_bridge.py  record_demo.ps1  train_nn.py
tools/mkimage/: Cargo.toml
tools/mkimage/src/: main.rs
