[package]
name = "los-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
los-kernel = { workspace = true }
los-memory = { workspace = true }
los-router = { workspace = true }
los-perception = { workspace = true }
