[package]
name = "los-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "living"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
los-kernel = { workspace = true }
los-memory = { workspace = true }
los-router = { workspace = true }
los-runtime = { workspace = true }
